--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,19 @@ jobs:
         run: go mod download
 
       - name: Run tests
-        run: go test ./... -v
+        run: |
+          # Run tests with coverage output. If tests fail, the job will fail here.
+          go test ./... -v -coverprofile=coverage.out
+
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage.out
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          files: coverage.out
+          # For public repos CODECOV_TOKEN is optional; set secrets.CODECOV_TOKEN for private repos
+          token: ${{ secrets.CODECOV_TOKEN }}
