--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,10 @@ jobs:
           path: coverage.out
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v5
         with:
           files: coverage.out
           # For public repos CODECOV_TOKEN is optional; set secrets.CODECOV_TOKEN for private repos
           token: ${{ secrets.CODECOV_TOKEN }}
+          # Fail the job if upload fails (optional - set to false to avoid failing CI on upload issues)
+          fail_ci_if_error: true
