example test coverage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,16 +2,16 @@ name: CI
 
 on:
   push:
-    branches: [ 'main' ]
+    branches: ["main"]
   pull_request:
-    branches: [ 'main' ]
+    branches: ["main"]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [ '1.19' ]
+        go-version: ["1.19"]
 
     steps:
       - uses: actions/checkout@v4
@@ -34,18 +34,9 @@ jobs:
       - name: Install dependencies
         run: go mod download
 
-      - name: Run tests (exclude examples from coverage)
+      - name: Run tests
         run: |
-          # Collect package list, excluding packages under ./examples, then run tests
-          pkgs=$(go list ./... | grep -v '^./examples')
-          echo "Testing packages:" 
-          echo "$pkgs"
-          if [ -z "$pkgs" ]; then
-            echo "No packages to test"
-            exit 0
-          fi
-          # Run tests with coverage output. If tests fail, the job will fail here.
-          go test $pkgs -v -coverprofile=coverage.out
+          go test ./... -v -coverprofile=coverage.out
 
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
