Added test tracking

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,8 @@ name: CI
 
 on:
   push:
-    branches: ["main"]
   pull_request:
-    branches: ["main"]
+  workflow_dispatch:
 
 jobs:
   test:
@@ -34,15 +33,32 @@ jobs:
       - name: Install dependencies
         run: go mod download
 
-      - name: Run tests
+      - name: Install test tools (gotestsum)
+        run: go install gotest.tools/gotestsum@latest
+
+      - name: Run tests and generate JUnit + coverage
         run: |
-          go test ./... -v -coverprofile=coverage.out
+          mkdir -p test-results
+          gotestsum --junitfile test-results/junit.xml -- -coverprofile=coverage.out ./...
 
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: coverage.out
+
+      - name: Upload JUnit test results artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: junit-test-results
+          path: test-results/
+
+      - name: Upload test results to Codecov (Test Analytics)
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: test-results/junit.xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
