--- a/codecov.yml
+++ b/codecov.yml
@@ -29,6 +29,10 @@ component_management:
       name: examples
       paths:
         - examples/**
+    - component_id: component_mocks
+      name: mocks
+      paths:
+        - mocks/**
     - component_id: component_cmd
       name: cmd
       paths:
@@ -82,6 +86,15 @@ flag_management:
       statuses:
         - type: project
           target: 60%
+          threshold: 1%
+        - type: patch
+          target: 80%
+    - name: mocks
+      paths:
+        - mocks/**
+      statuses:
+        - type: project
+          target: auto
           threshold: 1%
         - type: patch
           target: 80%
