--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,7 @@ jobs:
           run_group client ./client/...
           run_group services ./services/...
           run_group examples ./examples/...
+          run_group mocks ./mocks/...
           run_group cmd ./cmd/...
           run_group internal ./internal/...
           run_group legacy ./legacy/...
@@ -109,6 +110,14 @@ jobs:
         with:
           files: coverage/coverage-examples.out
           flags: examples
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+
+      - name: Upload mocks coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          files: coverage/coverage-mocks.out
+          flags: mocks
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
 
